Restore DT80W direct logger control
